<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Background-->
    <ImageView  android:id="@+id/img_bg"
        android:src="@drawable/bg_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3" />
    <!--Logo-->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintWidth_percent="0.4" />

    <!--Main Components-->
    <!--User Balance-->
    <TextView android:id="@+id/txt_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_balance"
        android:textStyle="bold"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginEnd="40dp"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/img_item" />
    <TextView android:id="@+id/txt_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300"
        android:textSize="25sp"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toEndOf="@id/txt_balance"
        app:layout_constraintBottom_toTopOf="@id/img_item" />
    <!--Increase Balance Button-->
    <ImageButton android:id="@+id/btn_add"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/btn_add_desc"
        android:background="@drawable/add_button"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintEnd_toStartOf="@id/txt_balance"
        app:layout_constraintBottom_toTopOf="@id/img_item" />
    <!--Item Image-->

    <!--Item Description-->

    <ImageView
        android:id="@+id/img_item"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@drawable/item_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494"
        app:layout_constraintWidth_percent="0.75" />

    <TextView android:id="@+id/txt_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="24sp"
        android:background="@drawable/text_frame"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/img_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_borrow"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHeight_percent="0.2" />
    <!--Item Name-->
    <TextView android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_item_default"
        android:textStyle="bold"
        android:textSize="28sp"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toTopOf="@id/txt_view"
        app:layout_constraintStart_toStartOf="@id/txt_view" />
    <!--Item Rating-->
    <RatingBar android:id="@+id/rtg_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="4.5"
        android:scaleY="0.4"
        android:scaleX="0.4"
        app:layout_constraintStart_toEndOf="@id/txt_name"
        app:layout_constraintTop_toTopOf="@id/txt_view"
        app:layout_constraintEnd_toStartOf="@id/txt_price" />
    <!--Item Price -->
    <TextView android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="200"
        android:textStyle="italic"
        android:textSize="28sp"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toTopOf="@id/txt_view"
        app:layout_constraintEnd_toEndOf="@id/txt_view"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHeight_percent="0.1" />
    <!--Item Color Choice-->
    <RadioGroup
        android:id="@+id/rgr_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="@id/txt_view"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintBottom_toBottomOf="@id/txt_view">
        <!-- Red Color Button -->
        <RadioButton
            android:id="@+id/rbt_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2C2C2C"
            android:text="@string/rbt_red"
            android:textSize="28sp"
            android:checked="true" />
        <!-- Yellow Color Button -->
        <RadioButton
            android:id="@+id/rbt_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2C2C2C"
            android:text="@string/rbt_pink"
            android:textSize="28sp"
            android:checked="false"/>
        <!-- Blue Color Button -->
        <RadioButton
            android:id="@+id/rbt_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#2C2C2C"
            android:text="@string/rbt_blue"
            android:textSize="28sp"
            android:checked="false"/>
    </RadioGroup>

    <!--Switch Image Button-->
    <!--Next Button-->
    <ImageButton android:id="@+id/btn_next"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/btn_next_desc"
        android:src="@drawable/icon_right"
        android:background="@drawable/circular_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_item"
        app:layout_constraintTop_toTopOf="parent" />
    <!--Previous Button-->
    <ImageButton android:id="@+id/btn_prev"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/btn_prev_desc"
        android:src="@drawable/icon_left"
        android:background="@drawable/circular_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/img_item"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Borrow Button-->
    <Button android:id="@+id/btn_borrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#9B785A"
        android:text="@string/btn_borrow"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txt_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>