<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <!--Background-->
    <ImageView  android:id="@+id/img_bg"
        android:src="@drawable/bg_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3" />
    <!--Logo-->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintWidth_percent="0.4" />
    <TextView android:id="@+id/txt_checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_checkout"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!--Return Button-->
    <ImageButton android:id="@+id/btn_return"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/btn_return_desc"
        android:src="@drawable/icon_left"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/circular_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Item View-->
    <!--Item Description-->
    <TextView android:id="@+id/txt_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="24sp"
        android:background="@drawable/text_frame"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_checkout"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHeight_percent="0.3" />
    <!--Item Image-->
    <ImageView android:id="@+id/img_item"
        android:src="@drawable/item_1"
        android:background="@drawable/rounded_corners"
        android:clipToOutline="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/txt_view"
        app:layout_constraintStart_toStartOf="@id/txt_view"
        app:layout_constraintWidth_percent="0.35"
        app:layout_constraintHeight_percent="0.15" />
    <!--Item Name-->
    <TextView android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_item_default"
        android:textStyle="bold"
        android:textSize="30sp"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toTopOf="@id/txt_view"
        app:layout_constraintStart_toEndOf="@id/img_item" />
    <!--Item Color-->
    <TextView android:id="@+id/txt_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintStart_toEndOf="@id/img_item" />
    <TextView android:id="@+id/txt_color_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbt_red"
        android:textSize="25sp"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        app:layout_constraintStart_toEndOf="@id/txt_color" />
    <!--Item Rating-->
    <RatingBar android:id="@+id/rtg_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="4.5"
        android:scaleY="0.5"
        android:scaleX="0.5"
        app:layout_constraintBottom_toBottomOf="@id/txt_view"
        app:layout_constraintStart_toStartOf="@id/txt_view" />
    <!--Item Price -->
    <TextView android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="200"
        android:textStyle="italic"
        android:textSize="40sp"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="@id/txt_view"
        app:layout_constraintBottom_toBottomOf="@id/txt_view"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintHeight_percent="0.1" />
    <!-- Duration TextView -->
    <TextView
        android:id="@+id/txt_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_duration"
        android:textSize="25sp"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_color_value"
        app:layout_constraintStart_toEndOf="@id/img_item" />
    <!-- Duration EditText -->
    <EditText
        android:id="@+id/edt_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="1"
        android:textSize="25sp"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:paddingTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_color_value"
        app:layout_constraintStart_toEndOf="@id/txt_duration" />

    <!--Confirm Order Panel-->
    <TextView android:id="@+id/txt_confirm_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="24sp"
        android:background="@drawable/text_frame"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_view"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintWidth_percent="0.9"/>
    <!--Total Price-->
    <TextView android:id="@+id/txt_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_total"
        android:textSize="25sp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toTopOf="@id/txt_confirm_view"
        app:layout_constraintStart_toStartOf="@id/txt_confirm_view" />
    <TextView android:id="@+id/txt_total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="200"
        android:textSize="25sp"
        android:paddingEnd="40dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toTopOf="@id/txt_confirm_view"
        app:layout_constraintEnd_toEndOf="@id/txt_confirm_view" />
    <!--Current Balance-->
    <TextView android:id="@+id/txt_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_balance"
        android:textSize="25sp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_total"
        app:layout_constraintStart_toStartOf="@id/txt_confirm_view" />
    <TextView android:id="@+id/txt_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300"
        android:textSize="25sp"
        android:paddingEnd="40dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_total_value"
        app:layout_constraintEnd_toEndOf="@id/txt_confirm_view" />
    <!--Remaining Balance-->
    <TextView android:id="@+id/txt_remain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_remain"
        android:textStyle="bold"
        android:textSize="25sp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_balance"
        app:layout_constraintStart_toStartOf="@id/txt_confirm_view" />
    <TextView android:id="@+id/txt_remain_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:textSize="25sp"
        android:paddingEnd="40dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/txt_credit"
        app:layout_constraintEnd_toEndOf="@id/txt_confirm_view" />
    <!--Confirm Order Button-->
    <Button android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:backgroundTint="#9B785A"
        android:text="@string/btn_confirm"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txt_remain"
        app:layout_constraintStart_toStartOf="@id/txt_confirm_view"
        app:layout_constraintEnd_toEndOf="@id/txt_confirm_view"
        app:layout_constraintBottom_toBottomOf="@id/txt_confirm_view"/>


</androidx.constraintlayout.widget.ConstraintLayout>